# stock-trading

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.md
.github/workflows/: ci.yml  daily_update.yml
config/: settings.yaml
config/scenarios/: s2.yaml  s3.yaml  s4.yaml  s6.yaml
config/universe/: nikkei225.csv  sp500.csv
docs/: architecture.md  claude_code_guide.md  implementation_guide.md  operations.md  prompt.md  scenarios.md  scenarios.md:Zone.Identifier  schedule.md  setup_checklist.txt  sharpe_improvement_plan.md  spec.html  spec.md  status_report_20260523.md  status_report_20260524.md  system_overview.md  todo_manual_setup.txt
results/: backtest_20260526_145045.json  backtest_20260526_165114.json  backtest_20260526_165733.json  backtest_20260526_165817.json  backtest_20260603_090655.json  backtest_20260603_090713.json  backtest_full_2019_2024.json  backtest_pilot_10sym.json  backtest_redesign_20260524.json  backtest_s2fix_confirm2_20260525.json  backtest_s3redesign_20260526.json  backtest_s3rsi2_20260526.json  backtest_s4tuned_20260526.json  backtest_us_full_20260603.json  backtest_wf_tuned_20260526.json  walkforward_20260526_144544.json  walkforward_20260526_173437.json  walkforward_pilot_10sym.json  walkforward_s2fix_20260525.json  walkforward_s4integrated_20260526.json  walkforward_us_with_earnings_20260603.json
scripts/: daily_signals.py  data_update.py  run_backtest.py  setup_cron.sh  walkforward.py
scripts/windows/: StockDailySignals.xml  StockDataUpdate.xml  StockEarningsJP.xml  StockEarningsUS.xml  gen_register.py  setup_task_scheduler.ps1  task_daily_signals.bat  task_data_update.bat  task_earnings_jp.bat  (+1 more)
tests/: test_notification.py
(+61 files in other folders)
