[project]
name = "stock-trading"
version = "0.1.0"
description = "日米株式投資自動化システム"
requires-python = ">=3.12"
dependencies = [
    "polars>=0.20.0",
    "duckdb>=0.10.0",
    "yfinance>=0.2.40",
    "pandas-ta>=0.3.14b",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "loguru>=0.7.0",
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "exchange-calendars>=4.5.0",
    "lxml>=6.1.1",
    "html5lib>=1.1",
    "beautifulsoup4>=4.14.3",
    "numpy>=2.2.6",
    "jquants-api-client>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
    "pre-commit>=3.6.0",
    "types-pyyaml>=6.0",
    "types-requests>=2.31.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=60"

[tool.coverage.run]
source = ["src"]
omit = ["src/agents/*", "src/reporting/dashboard.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["src/agents/", "notebooks/"]

[[tool.mypy.overrides]]
module = ["yfinance.*", "pandas_ta.*", "duckdb.*", "exchange_calendars.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
